[Password Manager] Fix password form reappear detection for empty action forms.

This CL chnages IsPasswordFormReappeared so it doesn't compare form actions
if they are empty.

R=cfroussios@chromium.org, kolos@chromium.org

Bug: 699539
Change-Id: Ia57c6ec7245d972e5df5f88b64c5ddac9c2c5c43
Reviewed-on: https://chromium-review.googlesource.com/916565
Commit-Queue: Maxim Kolosovskiy <kolos@chromium.org>
Reviewed-by: Maxim Kolosovskiy <kolos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#537643}
Former-commit-id: ada53fd633a1625eae0bc40b6721f149d989464e